# AgentLoom

./: .env.example  .gitignore  .repo-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  EDITORIAL_REVIEW_SUMMARY.md  LICENSE  LICENSE-DOCS.md  Makefile  README.md  SECURITY.md  ZENODO_INTEGRATION.md  context  pyproject.toml  requirements.txt
.clinerules/: 00-README.md  01-builder-agent-prompt.md  02-cline-host-adaptation.md  03-workshop-discipline.md
.cursor/: rules.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agentloom-framework/agentLoom-v3/: USER_MANUAL_NEW_PROJECT.md
agentloom-framework/dual-helix-3tracks-startup-v1/: AI_AGENT_STARTUP_GUIDE.md
agentloom-framework/dual-helix-3tracks-startup-v2/: AI_AGENT_SETUP_PROTOCOL_V2_SUMMARY.md  PROMPT_TEMPLATE_NEW_PROJECT.md  intermidia-11282025-INDEX_STRUCTURE_EXPLAINED.md  intermidia-11282025-SESSION_SUMMARY_NOV_28_2025.md
agentloom-framework/dual-helix-3tracks-startup-v3/: USER_MANUAL_NEW_PROJECT.md  (+1 more)
archive/: README.md
docs/: Agentic-AI-Research-Roadmap.md  DISCUSSION_TEMPLATE.md  Research-Timeline-2025-2027.md  START_HERE.md  co-agenticOS-integration-guide.md  dual-helix-clarification.md  getting-started.md  index.html  style.css
drafts/: USER_INPUT_NEEDED.md  diva-workshop-paper.md  workshop-paper-outline.md
examples/: README.md
experiments/: .gitkeep
figures/: .gitkeep  dual-helix-diagram-spec.md
meta/: README.md  directory-index.yaml  search-manifest.json
research/: README.md
scripts/: sync_clinerules.py
tests/: test_validators.py
(+272 files in other folders)
